@@ -51,7 +51,7 @@
 #include <dmalloc.h>
 #endif
 
-TDS_RCSID(var, "$Id: login.c,v 1.188 2009-08-25 14:25:35 freddy77 Exp $");
+TDS_RCSID(var, "$Id: login.c,v 1.189 2009-09-28 14:07:04 freddy77 Exp $");
 
 static int tds_send_login(TDSSOCKET * tds, TDSCONNECTION * connection);
 static int tds8_do_login(TDSSOCKET * tds, TDSCONNECTION * connection);
@@ -975,6 +975,13 @@ tds8_do_login(TDSSOCKET * tds, TDSCONNECTION * connection)
 
 	assert(start_pos >= 21 && start_pos <= sizeof(buf));
 	assert(buf[start_pos-1] == 0xff);
+
+	/*
+	 * fix a problem with mssql2k which doesn't like
+	 * packet splitted during SSL handshake
+	 */
+	if (tds->env.block_size < 4096)
+		tds_realloc_socket(tds, 4096);
 
 	/* do prelogin */
 	tds->out_flag = TDS8_PRELOGIN;
