@@ -1,3 +1,6 @@
+Mon Sep 28 16:06:37 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/tds/login.c: Fix SSL connection under mssql2k
+
 Mon Sep 14 12:02:10 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* configure.ac src/dblib/unittests/common.c:
 	- limit stack use in dblib tests
@@ -1847,4 +1850,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.2871 2009-09-14 10:02:13 freddy77 Exp $
+$Id: ChangeLog,v 1.2872 2009-09-28 14:07:04 freddy77 Exp $
